--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <h2>Commençons un projet ensemble</h2>
                 <p>Je suis à la recherche d'un stage en communication, audiovisuelle ou stratégie digitale à partir du
                     26 mai 2026.</p>
-                <a href="mailto:contact@example.com" class="btn-large">Me Contacter</a>
+                <a href="mailto:maevapiot.mail@gmail.com" class="btn-large">Me Contacter</a>
             </div>
         </section>
     </main>
